[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
build       = "build.rs"
description = "Darwinia Parachain"
edition     = "2018"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-parachain"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-parachain"
version     = "5.3.5-1"

[features]
alpha = ["pangolin-parachain-runtime/alpha"]

try-runtime = [
	# darwinia-network
	"crab-parachain-runtime/try-runtime",
	# paritytech
	"try-runtime-cli",
]

runtime-benchmarks = [
	# darwinia-network
	"pangolin-parachain-runtime/runtime-benchmarks",
	"crab-parachain-runtime/runtime-benchmarks",
	"darwinia-parachain-runtime/runtime-benchmarks",
	# paritytech
	# TODO: https://github.com/paritytech/cumulus/pull/991
	"polkadot-cli/runtime-benchmarks",
	"frame-benchmarking",
]

[dependencies]
# crates.io
array-bytes = { version = "4.1" }
async-trait = { version = "0.1" }
clap        = { version = "3.2", features = ["derive"] }
codec       = { package = "parity-scale-codec", version = "3.1" }
futures     = { version = "0.3" }
jsonrpsee   = { version = "0.14", features = ["server"] }
log         = { version = "0.4" }
serde       = { version = "1.0", features = ["derive"] }
tempfile    = { version = "3.3" }

# parachain
crab-parachain-runtime     = { path = "runtime/crab-parachain" }
darwinia-parachain-runtime = { path = "runtime/darwinia-parachain" }
dc-primitives              = { path = "primitives" }
dc-rpc                     = { path = "rpc" }
pangolin-parachain-runtime = { path = "runtime/pangolin-parachain" }

# substrate
frame-benchmarking             = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-benchmarking-cli         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-basic-authorship            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-chain-spec                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-cli                         = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-client-api                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-executor                    = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-network                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-service                     = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-sysinfo                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-telemetry                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-tracing                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-consensus-aura              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-inherents                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io                          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-offchain                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-session                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-timestamp                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
substrate-prometheus-endpoint  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
try-runtime-cli                = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# cumulus
cumulus-client-cli                      = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-client-consensus-aura           = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-client-consensus-common         = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-client-consensus-relay-chain    = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-client-network                  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-client-service                  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-primitives-core                 = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-primitives-parachain-inherent   = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-relay-chain-interface           = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-relay-chain-rpc-interface       = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }

# polkadot
polkadot-cli       = { features = ["rococo-native"], git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
polkadot-service   = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
xcm                = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
try-runtime-cli              = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[workspace]
members = [
	"primitives",
	"rpc",
	"runtime/*",
]
